# OC

./: README.md
kp/: CMakeLists.txt
kp/doc/: report.docx
kp/include/: CommonMutex.hpp  MappedFile.hpp  Player_Game.hpp
kp/src/: client.cpp  server.cpp
lab1/doc/: report.docx
lab2/: CMakeLists.txt
lab2/docs/: report.docx
lab2/src/: child  child.c  main  parent.cpp
lab3/: CMakeLists.txt
lab3/doc/: report.docx
lab3/src/: a.out  main.cpp  test  test2
lab4/: CMakeLists.txt
lab4/doc/: report .docx
lab4/src/: a.out  main.cpp  result  test
lab5/: CMakeLists.txt
lab5/doc/: report.odt
lab5/include/: realisation.h
lab5/src/: main.c  main.cpp  main_dyn.c  realisation1.c  realisation1.cpp  realisation2.c  realisation2.cpp
lab6-8/: CMakeLists.txt
lab6-8/doc/: report.docx
lab6-8/include/: header.hpp
lab6-8/src/: annotations_node.cpp  compling_node.cpp
